// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fieldset renders children and legend 1`] = `
<fieldset
  className="className"
  name="fieldset"
  style={Object {}}
  tabIndex={0}
>
  <legend>
    legend
  </legend>
  <label>
    Name:
  </label>
  <input
    id="employee_name"
    name="employee_name"
    type="text"
  />
</fieldset>
`;

exports[`Fieldset renders only children when no legend is passed 1`] = `
<fieldset
  className="className"
  name="fieldset"
  style={Object {}}
  tabIndex={0}
>
  <label>
    Name:
  </label>
  <input
    id="employee_name"
    name="employee_name"
    type="text"
  />
</fieldset>
`;
